--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,10 +8,12 @@ on:
       - main
       - master
       - develop
+
 name: "Build & Release"
+
 jobs:
   build:
-    name: Build & Release
+    name: Build Android
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
@@ -25,17 +27,30 @@ jobs:
           architecture: x64
 
       - run: flutter build apk --release --split-per-abi
+
+  build-ios:
+    name: Build iOS
+    runs-on: macos-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+
+      - run: flutter build ios --release --no-codesign
+
+  release:
+    name: Push to Releases
+    runs-on: ubuntu-latest
+    needs: [build, build-ios]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
+          artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/*.ipa"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
-
-
-
-
-
-
-# push to master, main, develop
-# pull request on main master
